--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
+    "start": "node build/index.js",
     "dev": "nodemon --watch src/**/*.ts --exec ts-node src/index.ts",
     "test": "exit",
     "clean": "rimraf build/*"
