--- a/config.toml.example
+++ b/config.toml.example
@@ -1,7 +1,20 @@
+# Image downloaded directory
+# Directory structure like thid below:
+# ../res
+#   |- inkbunny
+#   |  |- artist_name
+#   |     |- submission_file.jpg
+#   |
+#   |- furaffinity
+#      |- artist_name
+#         |- submission_file.jpg
+local = "../res"
+
 [db]
 mongodb = "mongodb://localhost:27017"
 dbname = "scrapbook"
 
+# If you store your files into the s3 bucket, fill this below
 [s3]
 # region = "us-west-4"
 endpoint = "https://s3.us-west-004.backblazeb2.com"
