Google Cloud Run ready

--- a/.env.example
+++ b/.env.example
@@ -10,17 +10,17 @@
 #         |- submission_file.jpg
 local = "../res"
 
-[db]
+#[db]
 mongodb = "mongodb://localhost:27017"
 dbname = "scrapbook"
 
 # If you store your files into the s3 bucket, fill this below
-[s3]
+#[s3]
 # region = "us-west-4"
 endpoint = "https://s3.us-west-004.backblazeb2.com"
 bucket = "my-bucket"
 prefix = "prefix/"
 
-[s3.credentials]
+#[s3.credentials]
 accessKeyId = "AWS access key ID"
 secretAccessKey = "AWS secret access key ID"
