region field is required

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ dbname = "scrapbook"
 
 # If you store your files into the s3 bucket, fill this below
 #[s3]
-# region = "us-west-4"
+region = "us-west-4"
 endpoint = "https://s3.us-west-004.backblazeb2.com"
 bucket = "my-bucket"
 prefix = "prefix/"
